Bug 161635 - FILEOPEN DOCX: smaller left padding for shape text than expected
Summary: FILEOPEN DOCX: smaller left padding for shape text than expected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-18 11:51 UTC by Miklos Vajna
Modified: 2024-06-19 12:19 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (15.09 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-06-18 11:51 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-06-18 11:51:04 UTC
Created attachment 194795 [details]
Minimal reproducer

Steps to reproduce:

1) Open the attached document

2) Check the horizontal position of the two paragraphs in the document

Expected result: the left position of the paragraphs match, like in Word.

Actual result: first paragraph has about 2.5cm left indent, second paragraph has about 1.5cm, they don't match.
Comment 1 Commit Notification 2024-06-19 09:22:54 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/61692b82ae4ff62662509b5979a7aabc7d380678

tdf#161635 sw DoNotCaptureDrawObjsOnPage: fix handling of left padding

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-06-19 12:19:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/ba0946d8d2b111fd5bcc908e350bb725255dd1c1

tdf#161635 sw DoNotCaptureDrawObjsOnPage: fix handling of left padding

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.